infrastructure/main/gateway-api/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.farag.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: main-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
